@@ -1,5 +1,5 @@
 import { Pipeline, Log } from '@ephox/agar';
-import { UnitTest } from '@ephox/bedrock-client';
+import { UnitTest, Assert } from '@ephox/bedrock-client';
 import { document, window, history } from '@ephox/dom-globals';
 import { LegacyUnit, TinyLoader } from '@ephox/mcagar';
 import Editor from 'tinymce/core/api/Editor';
@@ -12,65 +12,72 @@ UnitTest.asynctest('browser.tinymce.plugins.autosave.AutoSavePluginTest', (succe
   Plugin();
   Theme();
 
-  suite.test('TestCase-TBA: AutoSave: isEmpty true', function (editor) {
-    LegacyUnit.equal(editor.plugins.autosave.isEmpty(''), true);
-    LegacyUnit.equal(editor.plugins.autosave.isEmpty('   '), true);
-    LegacyUnit.equal(editor.plugins.autosave.isEmpty('\t\t\t'), true);
+  const checkIfEmpty = (editor: Editor, html: string, isEmpty: boolean): void => {
+    const result = isEmpty ? 'empty.' : 'not empty.';
 
-    LegacyUnit.equal(editor.plugins.autosave.isEmpty('<p id="x"></p>'), true);
-    LegacyUnit.equal(editor.plugins.autosave.isEmpty('<p></p>'), true);
-    LegacyUnit.equal(editor.plugins.autosave.isEmpty('<p> </p>'), true);
-    LegacyUnit.equal(editor.plugins.autosave.isEmpty('<p>\t</p>'), true);
+    Assert.eq('The HTML "' + html + '" is ' + result, editor.plugins.autosave.isEmpty(html), isEmpty);
+  };
 
-    LegacyUnit.equal(editor.plugins.autosave.isEmpty('<p><br></p>'), true);
-    LegacyUnit.equal(editor.plugins.autosave.isEmpty('<p><br /></p>'), true);
-    LegacyUnit.equal(editor.plugins.autosave.isEmpty('<p><br data-mce-bogus="true" /></p>'), true);
+  suite.test('TestCase-TBA: AutoSave: isEmpty true', (editor) => {
+    checkIfEmpty(editor, '', true);
+    checkIfEmpty(editor, '   ', true);
+    checkIfEmpty(editor, '\t\t\t', true);
 
-    LegacyUnit.equal(editor.plugins.autosave.isEmpty('<p><br><br></p>'), true);
-    LegacyUnit.equal(editor.plugins.autosave.isEmpty('<p><br /><br /></p>'), true);
-    LegacyUnit.equal(editor.plugins.autosave.isEmpty('<p><br data-mce-bogus="true" /><br data-mce-bogus="true" /></p>'), true);
+    checkIfEmpty(editor, '<p id="x"></p>', true);
+    checkIfEmpty(editor, '<p></p>', true);
+    checkIfEmpty(editor, '<p> </p>', true);
+    checkIfEmpty(editor, '<p>\t</p>', true);
+
+    checkIfEmpty(editor, '<p><br></p>', true);
+    checkIfEmpty(editor, '<p><br /></p>', true);
+    checkIfEmpty(editor, '<p><br data-mce-bogus="true" /></p>', true);
+    checkIfEmpty(editor, '<p><br data-mce-bogus="true" /></p>', true);
+
+    checkIfEmpty(editor, '<h1></h1>', true);
+    checkIfEmpty(editor, '<p><br data-mce-bogus="true" /><br data-mce-bogus="true" /></p>', true);
   });
 
-  suite.test('TestCase-TBA: AutoSave: isEmpty false', function (editor) {
-    LegacyUnit.equal(editor.plugins.autosave.isEmpty('X'), false);
-    LegacyUnit.equal(editor.plugins.autosave.isEmpty('   X'), false);
-    LegacyUnit.equal(editor.plugins.autosave.isEmpty('\t\t\tX'), false);
+  suite.test('TestCase-TBA: AutoSave: isEmpty false', (editor) => {
+    checkIfEmpty(editor, 'X', false);
+    checkIfEmpty(editor, '   X', false);
+    checkIfEmpty(editor, '\t\t\tX', false);
 
-    LegacyUnit.equal(editor.plugins.autosave.isEmpty('<p>X</p>'), false);
-    LegacyUnit.equal(editor.plugins.autosave.isEmpty('<p> X</p>'), false);
-    LegacyUnit.equal(editor.plugins.autosave.isEmpty('<p>\tX</p>'), false);
+    checkIfEmpty(editor, '<p>X</p>', false);
+    checkIfEmpty(editor, '<p> X</p>', false);
+    checkIfEmpty(editor, '<p>\tX</p>', false);
 
-    LegacyUnit.equal(editor.plugins.autosave.isEmpty('<p><br>X</p>'), false);
-    LegacyUnit.equal(editor.plugins.autosave.isEmpty('<p><br />X</p>'), false);
-    LegacyUnit.equal(editor.plugins.autosave.isEmpty('<p><br data-mce-bogus="true" />X</p>'), false);
+    checkIfEmpty(editor, '<p><br>X</p>', false);
+    checkIfEmpty(editor, '<p><br />X</p>', false);
+    checkIfEmpty(editor, '<p><br data-mce-bogus="true" />X</p>', false);
 
-    LegacyUnit.equal(editor.plugins.autosave.isEmpty('<p><br><br>X</p>'), false);
-    LegacyUnit.equal(editor.plugins.autosave.isEmpty('<p><br /><br />X</p>'), false);
-    LegacyUnit.equal(editor.plugins.autosave.isEmpty('<p><br data-mce-bogus="true" /><br data-mce-bogus="true" />X</p>'), false);
+    checkIfEmpty(editor, '<p><br><br></p>', false);
+    checkIfEmpty(editor, '<p><br /><br /></p>', false);
+    checkIfEmpty(editor, '<p><br><br>X</p>', false);
+    checkIfEmpty(editor, '<p><br /><br />X</p>', false);
+    checkIfEmpty(editor, '<p><br data-mce-bogus="true" /><br data-mce-bogus="true" />X</p>', false);
 
-    LegacyUnit.equal(editor.plugins.autosave.isEmpty('<h1></h1>'), false);
-    LegacyUnit.equal(editor.plugins.autosave.isEmpty('<img src="x" />'), false);
+    checkIfEmpty(editor, '<img src="x" />', false);
   });
 
-  suite.test('TestCase-TBA: AutoSave: hasDraft/storeDraft/restoreDraft', function (editor) {
-    LegacyUnit.equal(editor.plugins.autosave.hasDraft(), false);
+  suite.test('TestCase-TBA: AutoSave: hasDraft/storeDraft/restoreDraft', (editor) => {
+    Assert.eq('Check if it starts with a draft', editor.plugins.autosave.hasDraft(), false);
 
     editor.setContent('X');
     editor.undoManager.add();
     editor.plugins.autosave.storeDraft();
 
-    LegacyUnit.equal(editor.plugins.autosave.hasDraft(), true);
+    Assert.eq('Check that adding a draft adds a draft', editor.plugins.autosave.hasDraft(), true);
 
     editor.setContent('Y');
     editor.undoManager.add();
 
     editor.plugins.autosave.restoreDraft();
-    LegacyUnit.equal(editor.getContent(), '<p>X</p>');
+    Assert.eq('Check that a draft can be restored', editor.getContent(), '<p>X</p>');
     editor.plugins.autosave.removeDraft();
   });
 
-  suite.test('TestCase-TBA: AutoSave: recognises location hash change', function (editor) {
-    LegacyUnit.equal(editor.plugins.autosave.hasDraft(), false);
+  suite.test('TestCase-TBA: AutoSave: recognises location hash change', (editor) => {
+    Assert.eq('Check if it starts with a draft', editor.plugins.autosave.hasDraft(), false);
 
     editor.setContent('X');
     editor.undoManager.add();
@@ -78,12 +85,12 @@ UnitTest.asynctest('browser.tinymce.plugins.autosave.AutoSavePluginTest', (succe
 
     window.location.hash = 'test' + Math.random().toString(36).substring(7);
 
-    LegacyUnit.equal(editor.plugins.autosave.hasDraft(), false);
+    Assert.eq('Check if it notices a hash change', editor.plugins.autosave.hasDraft(), false);
 
     history.replaceState('', document.title, window.location.pathname + window.location.search);
   });
 
-  TinyLoader.setupLight(function (editor, onSuccess, onFailure) {
+  TinyLoader.setupLight((editor, onSuccess, onFailure) => {
     Pipeline.async({}, Log.steps('TBA', 'AutoSave: Test autosave isEmpty true/false, drafts and location hash change', suite.toSteps(editor)), onSuccess, onFailure);
   }, {
     plugins: 'autosave',
