@@ -10,6 +10,7 @@ Version 5.4.0 (TBD)
     Changed `advlist` toolbar buttons to only show a dropdown list if there's more than one option #TINY-3194
     Changed `mceInsertTable` command and `insertTable` API method to take optional header rows and columns arguments #TINY-6012
     Changed stylesheet loading, so that UI skin stylesheets now to load in a ShadowRoot, if the editor is in a ShadowRoot. #TINY-6089
+    Fixed the `autosave` isEmpty API incorrectly detecting non-empty content as empty #TINY-5953
     Fixed table `Paste row after` and `Paste row before` menu items not disabled when nothing was available to paste #TINY-6006
     Fixed a selection performance issue with large tables on Microsoft Internet Explorer and Edge #TINY-6057
     Fixed filters for screening commands from the undo stack to be properly case-insensitive #TINY-5946
